Fix display issue on mobile

--- a/themes/kahikatoa/css/kahikatoa.css
+++ b/themes/kahikatoa/css/kahikatoa.css
@@ -359,7 +359,6 @@ main {
 
 footer {
 	background-color: #ab3334;
-	max-height: 20rem;
 }
 footer .kiwitrees_logo {
 	background: url(../images/kiwitrees-nova-logo.png) no-repeat center;
